metadata/force-app/main/default/objects/NPS_User_Survey_via_Gainsight__c/NPS_User_Survey_via_Gainsight__c.object-meta.xml
<CustomObject>
    <description>NPS survey from Bynder Champions via Gainsight. Customer Success</description>
    <label>NPS User Survey via Gainsight</label>
    <nameField>
        <label>NPS User Survey via Gainsight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS User Survey via Gainsight</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>