metadata/force-app/main/default/objects/NPS_User_Survey_via_Gainsight__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>