metadata/force-app/main/default/objects/NPS_User_Survey_via_Gainsight__c/fields/Contact_g__c.field-meta.xml
<CustomField>
    <fullName>Contact_g__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPS User Survey via Gainsight</relationshipLabel>
    <relationshipName>NPS_User_Survey_via_Gainsight</relationshipName>
    <type>Lookup</type>
</CustomField>