metadata/force-app/main/default/objects/NPS_User_Survey_via_Gainsight__c/fields/NPS_Gainsight_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Gainsight_Score__c</fullName>
    <label>NPS Gainsight Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>