metadata/force-app/main/default/objects/NPS_User_Survey_via_Gainsight__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>