metadata/force-app/main/default/objects/NPS_User_Survey_via_Gainsight__c/fields/ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseDate__c</fullName>
    <label>ResponseDate</label>
    <type>Date</type>
</CustomField>